<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_6sdp"
    android:background="@drawable/other_detail_background"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingVertical="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rocket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/title_rocket_detail"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_rocket_detail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rocket_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/text_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rocket_title"
        tools:text="@string/text_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rocket_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/text_type"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rocket_name"
        tools:text="@string/text_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rocket_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/text_description"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rocket_type"
        tools:text="@string/text_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rocket_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="0dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@id/tv_rocket_desc_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rocket_type"
        tools:text="@string/text_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>