<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_6sdp"
    android:background="@drawable/other_detail_background"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingVertical="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_launch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/title_launch_detail"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_launch_detail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_launch_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/text_status"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_title"
        tools:text="@string/text_status" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_launch_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/text_launch_site"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_status"
        tools:text="@string/text_launch_site" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_launch_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/text_launch_window"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_site"
        tools:text="@string/text_launch_window" />

</androidx.constraintlayout.widget.ConstraintLayout>